# YAEmulator-GB-Rust

./: .gitignore  Cargo.toml  README.md
resources/test/: vram-read-dmgC.gb
src/: GB.rs  gui.rs  main.rs  tests.rs  utils.rs
src/GB/: APU.rs  BIOS.rs  CPU.rs  DMA.rs  PPU.rs  RAM.rs  addresses.rs  apu.rs  bus.rs  cartridge.rs  cpu.rs  dma.rs  input.rs  instructions.rs  interrupt.rs  joypad.rs  memory.rs  ppu.rs  registers.rs  timer.rs  traits.rs  types.rs  utils.rs
src/GB/APU/: channels.rs  constants.rs  mmio.rs
src/GB/APU/channels/: envelope.rs  noise_channel.rs  pulse_channel.rs  sweep.rs  wave_channel.rs
src/GB/CPU/: cpu_mmio.rs  instructions.rs  registers.rs  timer.rs
src/GB/CPU/instructions/: microcode.rs
src/GB/CPU/registers/: core_registers.rs  interrupt_registers.rs  timer.rs  (+1 more)
src/GB/PPU/: addresses.rs  constants.rs  lcd_stats_masks.rs  lcdc_masks.rs  oam.rs  ppu_mmio.rs  ppu_mode.rs  tests.rs  tile.rs
src/GB/apu/: apu_mmio.rs  channels.rs  constants.rs  mmio.rs
src/GB/cartridge/: addresses.rs  controller.rs  header.rs  mbc1.rs  tests.rs
src/GB/cpu/: cpu_mmio.rs  instructions.rs
src/GB/dma/: dma_mmio.rs
src/GB/instructions/: test.rs  test_default.rs  test_subset.rs
src/GB/memory/: BIOS.rs  addresses.rs  hram.rs  interrupts.rs  oam_memory.rs  registers.rs  vram.rs  wram.rs
src/GB/ppu/: addresses.rs  constants.rs  lcd.rs  lcd_control.rs  lcd_stat.rs  lcdc_masks.rs  oam.rs  oam_mmio.rs  palette.rs  pixel.rs  pixel_fetcher.rs  ppu_mmio.rs  ppu_mode.rs  tests.rs  tile.rs  tile_line.rs
src/GB/types/: address.rs
src/utils/: macros.rs
(+21 files in other folders)
