[package]
name = "YAEmulator"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
iced = { git = "https://github.com/iced-rs/iced.git", version = "0.13.0-dev", features = ["advanced", "lazy", "canvas"] }

[features]
debug = []
