[package]
name = "YAEmulator"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
iced = { version = "0.12", features = ["advanced", "lazy", "canvas"] }
lazy_static = "1.4.0"
winit = "0.30.0"
crossterm = "0.28.1"

[features]
debug = []
